--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
     "rewrites": [
-      { "source": "/", "destination": "/index.html" }
+      {
+        "source": "/",
+        "destination": "/index.html"
+      }
     ],
     "headers": [
       {
@@ -8,7 +11,15 @@
         "headers": [
           {
             "key": "Cache-Control",
+            "value": "no-store, no-cache, must-revalidate"
+          },
+          {
+            "key": "Pragma",
             "value": "no-cache"
+          },
+          {
+            "key": "Expires",
+            "value": "0"
           }
         ]
       }
